changed logo from portrait to horizontal, and updated it on the website.

--- a/index.html
+++ b/index.html
@@ -64,11 +64,12 @@ border-color: #0047AB;
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
 <a href="#" class="flex items-center space-x-3">
-<span class="font-['Pacifico'] text-primary text-2xl">Fadan</span>
-<div class="hidden md:block">
-<h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
-<p class="text-xs text-gray-500">Member of Strathwell Group</p>
-</div>
+  <!-- Replace text logo with image logo -->
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-10 w-auto">
+  <div class="hidden md:block">
+    <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
+    <p class="text-xs text-gray-500">Member of Strathwell Group</p>
+  </div>
 </a>
 <nav class="hidden md:flex items-center space-x-8">
 <a href="#" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
@@ -247,7 +248,7 @@ Learn More
 <i class="ri-team-line ri-2x"></i>
 </div>
 <h3 class="text-xl font-bold mb-4 text-gray-800">Leadership Training</h3>
-<p class="text-gray-600 mb-6">Our specialized training programs develop the skills and capabilities of your sales and distribution teams, helping you retain top talent and drive operational excellence.</p>
+<p class="text-gray-600 mb-6 leading-relaxed">Our specialized training programs develop the skills and capabilities of your sales and distribution teams, helping you retain top talent and drive operational excellence.</p>
 <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/de0ee1d6-b817-49de-a780-dccd74a6089f" data-readdy="true" class="text-primary font-medium inline-flex items-center hover:underline">
 Learn More
 <i class="ri-arrow-right-line ml-2"></i>
@@ -597,7 +598,8 @@ Send Message
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
 <div>
 <div class="flex items-center mb-6">
-<span class="font-['Pacifico'] text-white text-3xl">Fadan</span>
+  <!-- Replace text logo with image logo -->
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-10 w-auto">
 </div>
 <p class="text-gray-400 mb-6">Fadan Consultant Limited is a premier FMCG consulting firm based in Nairobi, helping brands optimize distribution and grow across East Africa since 2015.</p>
 <div class="flex space-x-4">
