--- a/Detailed-Project-Case-Study.html
+++ b/Detailed-Project-Case-Study.html
@@ -132,7 +132,8 @@ input:focus, textarea:focus {
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
   <div class="container mx-auto px-4 py-3 flex justify-between items-center">
     <a href="#" class="flex items-center space-x-3">
-      <span class="font-['Pacifico'] text-primary text-2xl">Fadan</span>
+      <!-- Replace text logo with image logo -->
+      <img src="assets/logo.png" alt="Fadan Logo" class="h-10 w-auto">
       <div class="hidden md:block">
         <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
         <p class="text-xs text-gray-500">Member of Strathwell Group</p>
@@ -859,7 +860,8 @@ input:focus, textarea:focus {
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
       <div>
         <div class="flex items-center mb-6">
-          <span class="font-['Pacifico'] text-white text-3xl">Fadan</span>
+          <!-- Replace text logo with image logo -->
+          <img src="assets/logo.png" alt="Fadan Logo" class="h-10 w-auto">
         </div>
         <p class="text-gray-400 mb-6">Fadan Consultant Limited is a premier FMCG consulting firm based in Nairobi, helping brands optimize distribution and grow across East Africa since 2015.</p>
         <div class="flex space-x-4">
@@ -1141,9 +1143,7 @@ document.addEventListener('DOMContentLoaded', function() {
       if (scrollPosition >= sectionTop && scrollPosition < sectionTop + sectionHeight) {
         navLinks.forEach(link => {
           link.classList.remove('active');
-          if (link.getAttribute('href') === `#${sectionId}`) {
-            link.classList.add('active');
-          }
+          if (link.getAttribute('href') === `#${
         });
       }
     });
