--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ border-color: #0047AB;
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
 <a href="#" class="flex items-center space-x-3">
   <!-- Replace text logo with image logo -->
-  <img src="assets/logo.png" alt="Fadan Logo" class="h-10px w-auto">
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-10 w-auto">
 </a>
 <nav class="hidden md:flex items-center space-x-8">
 <a href="#" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
