--- a/services-distribution-strategy.html
+++ b/services-distribution-strategy.html
@@ -29,8 +29,8 @@
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
   <div class="container mx-auto px-4 py-3 flex justify-between items-center">
     <a href="index.html" class="flex items-center space-x-3">
-      <!-- Replace text logo with image logo -->
-      <img src="assets/logo.png" alt="Fadan Logo" class="h-12 w-auto">
+      <!-- Replace text logo with larger image logo -->
+      <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
       <div class="hidden md:block">
         <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
         <p class="text-xs text-gray-500">Member of Strathwell Group</p>
@@ -396,7 +396,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
       <div>
         <div class="flex items-center mb-6">
-          <img src="assets/logo.png" alt="Fadan Logo" class="h-12 w-auto">
+          <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
         </div>
         <p class="text-gray-400 mb-6">Fadan Consultant Limited is a premier FMCG consulting firm based in Nairobi, helping brands optimize distribution and grow across East Africa since 2015.</p>
         <div class="flex space-x-4">
