--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ border-color: #0047AB;
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
 <a href="#" class="flex items-center space-x-3">
-  <!-- Replace text logo with image logo -->
-  <img src="assets/logo.png" alt="Fadan Logo" class="h-12 w-auto">
+  <!-- Replace text logo with larger image logo -->
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
 </a>
 <nav class="hidden md:flex items-center space-x-8">
 <a href="#" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
@@ -594,8 +594,8 @@ Send Message
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
 <div>
 <div class="flex items-center mb-6">
-  <!-- Replace text logo with image logo -->
-  <img src="assets/logo.png" alt="Fadan Logo" class="h-12 w-auto">
+  <!-- Replace text logo with larger image logo -->
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
 </div>
 <p class="text-gray-400 mb-6">Fadan Consultant Limited is a premier FMCG consulting firm based in Nairobi, helping brands optimize distribution and grow across East Africa since 2015.</p>
 <div class="flex space-x-4">
