Increased logo size (h-20), Reduced header/menu bar height (py-2), Reduced font sizes for body and headings, Improved .active-nav styling, Adjusted nav spacing, adjudted the Footer logo size.

--- a/Distribution-strategy.html
+++ b/Distribution-strategy.html
@@ -17,10 +17,14 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
+  font-size: 15px;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
 }
+h1 { font-size: 2.25rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: 1.125rem; }
 .progress-bar {
   position: fixed;
   top: 0;
@@ -103,6 +107,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 .nav-link {
   position: relative;
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  transition: color 0.2s;
 }
 .nav-link::after {
   content: '';
@@ -117,8 +124,13 @@ h1, h2, h3, h4, h5, h6 {
 .nav-link:hover::after {
   width: 100%;
 }
+.active-nav {
+  color: #0047AB !important;
+  font-weight: 700;
+}
 .active-nav::after {
   width: 100%;
+  background-color: #0047AB;
 }
 input:focus, textarea:focus {
   outline: none;
@@ -129,15 +141,6 @@ input:focus, textarea:focus {
   font-weight: 500;
   border-left-color: #0047AB;
 }
-header .container img {
-  height: 3.5rem !important;
-  width: auto;
-}
-@media (max-width: 640px) {
-  header .container img {
-    height: 2.5rem !important;
-  }
-}
 </style>
 </head>
 <body class="bg-gray-50">
@@ -145,17 +148,21 @@ header .container img {
 
 <!-- Header/Navigation -->
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
-  <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+  <div class="container mx-auto px-4 py-2 flex justify-between items-center"> <!-- py-2 for less height -->
     <a href="#" class="flex items-center space-x-3">
-      <!-- Logo with correct dimensions -->
-      <img src="assets/logo.png" alt="Fadan Logo" class="h-14 md:h-16 w-auto" style="height:3.5rem;">
+      <!-- Replace text logo with larger image logo -->
+      <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
+      <div class="hidden md:block">
+        <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
+        <p class="text-xs text-gray-500">Member of Strathwell Group</p>
+      </div>
     </a>
     <nav class="hidden md:flex items-center space-x-8">
-      <a href="index.html" data-readdy="true" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
-      <a href="index.html/about" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">About Us</a>
-      <a href="index.html/services" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
-      <a href="index.html/services" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Projects</a>
-      <a href="index.html/contact" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
+      <a href="https://readdy.ai/home/7a7ca98d-8175-46e2-9a5c-ca2265888c93/4113dc2e-b1be-4377-99cc-00f2feec63d0" data-readdy="true" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
+      <a href="#about" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">About Us</a>
+      <a href="#services" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Services</a>
+      <a href="#projects" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Projects</a>
+      <a href="#contact" class="nav-link text-gray-800 font-medium hover:text-primary transition-colors">Contact</a>
     </nav>
     <button class="md:hidden flex items-center justify-center w-10 h-10 text-gray-700" id="mobile-menu-button">
       <i class="ri-menu-line ri-2x"></i>
@@ -870,8 +877,8 @@ header .container img {
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
       <div>
         <div class="flex items-center mb-6">
-          <!-- Replace text logo with larger image logo -->
-          <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
+          <!-- Larger logo in footer -->
+          <img src="assets/logo.png" alt="Fadan Logo" class="h-20 w-auto"> <!-- was h-16 -->
         </div>
         <p class="text-gray-400 mb-6">Fadan Consultant Limited is a premier FMCG consulting firm based in Nairobi, helping brands optimize distribution and grow across East Africa since 2015.</p>
         <div class="flex space-x-4">
