--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ border-color: #0047AB;
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50 transition-all duration-300">
 <div class="container mx-auto px-4 py-3 flex justify-between items-center">
 <a href="#" class="flex items-center space-x-3">
-  <!-- Larger logo -->
-  <img src="assets/logo.png" alt="Fadan Logo" class="h-20 w-auto"> <!-- was h-16 -->
+  <!-- Replace text logo with larger image logo -->
+  <img src="assets/logo.png" alt="Fadan Logo" class="h-20 w-auto">
 </a>
 <nav class="hidden md:flex items-center space-x-8">
 <a href="#" class="nav-link active-nav text-gray-800 font-medium hover:text-primary transition-colors">Home</a>
