`Refactored services-distribution-strategy.html with updated CSS styles and layout adjustments`

--- a/services-distribution-strategy.html
+++ b/services-distribution-strategy.html
@@ -12,8 +12,45 @@
   <script src="https://cdn.tailwindcss.com/3.4.16"></script>
   <script>tailwind.config={theme:{extend:{colors:{primary:'#0047AB',secondary:'#4A4A4A'},borderRadius:{'button':'8px'}}}}</script>
   <style>
-    body { font-family: 'Roboto', sans-serif; color: #333; }
-    h1, h2, h3, h4, h5, h6 { font-family: 'Montserrat', sans-serif; }
+    body { font-family: 'Roboto', sans-serif; color: #333; font-size: 15px; }
+    h1 { font-size: 2.25rem; }
+    h2 { font-size: 1.5rem; }
+    h3 { font-size: 1.125rem; }
+    h4, h5, h6 { font-size: 1rem; }
+    .nav-link, nav a, .footer a, .footer li, .footer p, .footer span {
+      font-size: 0.97rem;
+    }
+    input, textarea, select, button {
+      font-size: 0.97rem;
+    }
+    .hero-section h1 { font-size: 2.5rem !important; }
+    @media (min-width: 768px) {
+      .hero-section h1 { font-size: 3rem !important; }
+    }
+    @media (min-width: 1024px) {
+      .hero-section h1 { font-size: 3.5rem !important; }
+    }
+    header .container {
+      padding-top: 0.5rem !important;
+      padding-bottom: 0.5rem !important;
+      min-height: 72px;
+    }
+    header {
+      transition: none !important;
+    }
+    header .container img {
+      height: 3.5rem !important;
+      width: auto;
+    }
+    footer .flex.items-center.mb-6 img {
+      height: 3.5rem !important;
+      width: auto;
+    }
+    @media (max-width: 640px) {
+      header .container img, footer .flex.items-center.mb-6 img {
+        height: 2.5rem !important;
+      }
+    }
     .hero-section { background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('https://readdy.ai/api/search-image?query=distribution%20network%20FMCG%20East%20Africa%20logistics%20trucks%20warehouse%20supply%20chain%20Nairobi&width=1600&height=800'); background-size: cover; background-position: center; }
     .nav-link { position: relative; }
     .nav-link::after { content: ''; position: absolute; width: 0; height: 2px; bottom: -4px; left: 0; background-color: #0047AB; transition: width 0.3s; }
@@ -27,10 +64,10 @@
 <body class="bg-gray-50">
 <!-- Header/Navigation -->
 <header class="fixed top-0 left-0 w-full bg-white shadow-md z-50">
-  <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+  <div class="container mx-auto px-4 py-2 flex justify-between items-center" style="min-height:72px;">
     <a href="index.html" class="flex items-center space-x-3">
       <!-- Replace text logo with larger image logo -->
-      <img src="assets/logo.png" alt="Fadan Logo" class="h-16 w-auto">
+      <img src="assets/logo.png" alt="Fadan Logo" class="h-14 md:h-16 w-auto" style="height:3.5rem;">
       <div class="hidden md:block">
         <h1 class="text-lg font-semibold text-gray-800">Fadan Consultant Limited</h1>
         <p class="text-xs text-gray-500">Member of Strathwell Group</p>
@@ -392,7 +429,6 @@
 <!-- Footer -->
 <footer class="bg-gray-900 text-white pt-16 pb-8">
   <div class="container mx-auto px-4">
-    <!-- ...existing code from index.html footer... -->
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mb-12">
       <div>
         <div class="flex items-center mb-6">
