--- a/index.html
+++ b/index.html
@@ -662,3 +662,6 @@ mobileMenuButton.addEventListener('click', function() {
 mobileMenu.classList.toggle('hidden');
 });
 });
+</script>
+</body>
+</html>
