--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@ footer .flex.items-center.mb-6 img {
     height: 3rem !important; /* increased from 2.5rem to 3rem */
   }
 }
+.hero-section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://readdy.ai/api/search-image?query=professional%20business%20meeting%20in%20modern%20office%20with%20FMCG%20products%20displayed%2C%20executives%20discussing%20strategy%2C%20clean%20corporate%20environment%2C%20bright%20natural%20lighting%2C%20business%20professionals%20in%20formal%20attire%2C%20panoramic%20view%20of%20Nairobi%20skyline%20visible%20through%20windows%2C%20high-end%20office%20interior&width=1600&height=800&seq=hero1&orientation=landscape');
+  background-size: cover;
+  background-position: center;
+}
+.cta-section {
+  background-image: linear-gradient(rgba(0, 71, 171, 0.85), rgba(0, 71, 171, 0.9)), url('https://readdy.ai/api/search-image?query=abstract%20business%20background%20with%20subtle%20patterns%2C%20professional%20corporate%20design%20elements%2C%20light%20geometric%20shapes%2C%20modern%20business%20environment%2C%20subtle%20texture%2C%20minimalist%20design&width=1600&height=600&seq=cta1&orientation=landscape');
+  background-size: cover;
+  background-position: center;
+}
 </style>
 </head>
 <body class="bg-gray-50">
